test/corpus/sections.txt
=================================
all documented fixed sections
=================================

[General]
[Proxy]
[Proxy Group]
[Rule]
[Host]
[URL Rewrite]
[Header Rewrite]
[Body Rewrite]
[Map Local]
[MITM]
[Keystore]
[SSID Setting]
[Script]
[Panel]
[Ponte]
[Port Forwarding]
[Testing]
[DHCP]
[Snell Server]
[MTProto]

---

(source_file
  (general_section
    (section_header))
  (proxy_section
    (section_header))
  (proxy_group_section
    (section_header))
  (rule_section
    (section_header))
  (host_section
    (section_header))
  (url_rewrite_section
    (section_header))
  (header_rewrite_section
    (section_header))
  (body_rewrite_section
    (section_header))
  (map_local_section
    (section_header))
  (mitm_section
    (section_header))
  (keystore_section
    (section_header))
  (ssid_setting_section
    (section_header))
  (script_section
    (section_header))
  (panel_section
    (section_header))
  (ponte_section
    (section_header))
  (port_forwarding_section
    (section_header))
  (testing_section
    (section_header))
  (dhcp_section
    (section_header))
  (snell_server_section
    (section_header))
  (mtproto_section
    (section_header)))

=================================
dynamic section families preserve names
=================================

[WireGuard office]
[Tailscale personal mesh]
[Ruleset Streaming Media]

---

(source_file
  (wireguard_section
    (section_header
      name: (section_name)))
  (tailscale_section
    (section_header
      name: (section_name)))
  (ruleset_section
    (section_header
      name: (section_name))))

=================================
unknown and repeated sections remain visible
=================================

[Future Protocol]
opaque = first
another opaque line

[General]
first = value

[General]
second = value

---

(source_file
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line)
    (unknown_line))
  (general_section
    (section_header)
    (assignment
      key: (key)
      value: (bare_value)))
  (general_section
    (section_header)
    (assignment
      key: (key)
      value: (bare_value))))

=================================
dynamic-family prefix collisions remain unknown
=================================

[RulesetX]
opaque = ruleset-x
[Ruleset-Extension]
opaque ruleset extension
[WireGuardX]
opaque = wireguard-x
[TailscaleX]
opaque tailscale-x
[Ruleset]
opaque bare ruleset
[WireGuard]
opaque = bare wireguard
[Tailscale]
opaque bare tailscale
[Ruleset   ]
opaque spaced ruleset
[WireGuard   ]
opaque spaced wireguard
[Tailscale   ]
opaque spaced tailscale
[General]
recovered = true

---

(source_file
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (unknown_section
    (section_header
      name: (section_name))
    (unknown_line))
  (general_section
    (section_header)
    (assignment
      key: (key)
      value: (bare_value))))

=================================
full-line comments and directives are distinct
=================================

#!name=Example Module
# hash comment
; semicolon comment
// slash comment

[General]
  # indented comment
#!include Shared.dconf
opaque = value

---

(source_file
  (module_name_directive
    value: (bare_value))
  (comment)
  (comment)
  (comment)
  (general_section
    (section_header)
    (comment)
    (include_directive
      target: (include_target))
    (assignment
      key: (key)
      value: (bare_value))))

=================================
malformed content does not consume the next section
=================================

[General]
[unterminated header

[Proxy]
proxy = direct

---

(source_file
  (general_section
    (section_header))
  (unknown_section
    (section_header
      (section_name)
      (MISSING "]")))
  (proxy_section
    (section_header)
    (named_declaration
      (declaration_name)
      (positional_value
        (bare_value)))))

=================================
header matching is case-sensitive and permits surrounding whitespace
=================================

  [General]
[general]
[Ruleset   Streaming Media  ]

---

(source_file
  (general_section
    (section_header))
  (unknown_section
    (section_header
      name: (section_name)))
  (ruleset_section
    (section_header
      name: (section_name))))

=================================
orphan content recovers at the next section header
=================================

orphan content
[Rule]
FINAL,DIRECT

---

(source_file
  (ERROR
    (unknown_line))
  (rule_section
    (section_header)
    (rule
      (rule_kind)
      (policy
        (bare_value)))))

=================================
concatenated section headers are malformed
=================================

[General][Proxy]
[Rule]
FINAL,DIRECT

---

(source_file
  (ERROR
    (section_header))
  (proxy_section
    (section_header))
  (rule_section
    (section_header)
    (rule
      (rule_kind)
      (policy
        (bare_value)))))

=================================
trailing header data is a local error
=================================

[General] trailing data
[Rule]
FINAL,DIRECT

---

(source_file
  (general_section
    (section_header))
  (ERROR
    (requirement_bare_value)
    (requirement_bare_value))
  (rule_section
    (section_header)
    (rule
      (rule_kind)
      (policy
        (bare_value)))))

=================================
dynamic headers cannot cross physical lines
=================================

[Ruleset name
]
[Rule]
FINAL,DIRECT

---

(source_file
  (ruleset_section
    (section_header
      name: (section_name)
      (ERROR)))
  (rule_section
    (section_header)
    (rule
      kind: (rule_kind)
      policy: (policy
        value: (bare_value)))))

=================================
malformed dynamic headers preserve following statements and sections
=================================

[Ruleset Broken
DOMAIN,valid.example
[Rule]
FINAL,DIRECT

---

(source_file
  (ruleset_section
    (section_header
      name: (section_name)
      (MISSING "]"))
    (ordered_comma_statement
      kind: (rule_kind)
      argument: (positional_value
        value: (bare_value))))
  (rule_section
    (section_header)
    (rule
      kind: (rule_kind)
      policy: (policy
        value: (bare_value)))))
